# face_recognition_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: scan_for_faces.action
msg/: face_recognition.msg
