<?xml version="1.0"?>
<package format="2">
  <name>face_recognition_msgs</name>
  <version>0.1.1</version>
  <description>The face_recognition_msgs package is for custom message types</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
 
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

</package>
